# helix

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: helix-tpm.yml
alembic/: env.py
alembic/versions/: 5a6d515f827d_initial_schema.py  a1b2c3d4e5f6_add_local_mode_fields.py
docs/: CLOUD_DEPLOYMENT.md
github-action/: Dockerfile  action.yml  entrypoint.py
seed/: sample_prd.md  sample_risk_history.json
src/helix/: __init__.py  cli.py  config.py  main.py  seed.py
src/helix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/helix/agents/: __init__.py  base.py  gap_analyzer.py  launch_prefill.py  risk_analyzer.py  scope_checker.py
src/helix/api/: deps.py
src/helix/api/routes/: analysis.py  documents.py  launch.py  local_check.py  projects.py  webhooks.py  workspace.py
src/helix/db/: session.py
src/helix/integrations/: __init__.py  github.py  local_git.py  metrics.py  path_resolver.py  workflow_parser.py
src/helix/llm/: __init__.py  base.py  router.py  token_budget.py
src/helix/llm/prompts/: gap_analysis.j2  launch_prefill.j2  risk_analysis.j2  scope_check.j2
src/helix/models/: __init__.py  db.py  schemas.py
src/helix/rag/: __init__.py  graph.py  indexer.py  retriever.py  vector.py
src/helix/tasks/: workers.py
tests/: conftest.py
tests/test_agents/: test_base_agent.py  test_risk_analyzer.py  test_scope_checker.py
tests/test_api/: test_health.py  test_projects.py
tests/test_llm/: test_base.py
tests/test_rag/: test_indexer.py
ui/: app.py
(+10 files in other folders)
